cti_vm_throw gets kicked out by gcc 4.6 -flto https://bugs.webkit.org/show_bug.cgi?id=56088

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-05-24
Reviewed by Darin Adler.

Source/JavaScriptCore:

Add REFERENCED_FROM_ASM to functions only referenced from assembler.

* dfg/DFGOperations.cpp:
* jit/HostCallReturnValue.h:
* jit/JITStubs.h:
* jit/ThunkGenerators.cpp:

Source/WTF:

Define REFERENCED_FROM_ASM to __attribute__((used)) on GCC.

* wtf/Compiler.h:

Canonical link: https://commits.webkit.org/105113@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118344 268f45cc-cd09-0410-ab3c-d52691b4dbfc